unpackaged/main/default/objects/Opportunity/fields/Contact_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>Contact_DocuSign__c</fullName>
    <formula>Contact__r.FirstName &amp; " " &amp; Contact__r.LastName</formula>
    <label>Contact_DocuSign</label>
    <type>Text</type>
</CustomField>