unpackaged/main/default/objects/Opportunity/fields/Contingent_PTO__c.field-meta.xml
<CustomField>
    <fullName>Contingent_PTO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contingent PTO</label>
    <type>Checkbox</type>
</CustomField>