unpackaged/main/default/objects/Opportunity/fields/Contract_Received__c.field-meta.xml
<CustomField>
    <fullName>Contract_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Received</label>
    <type>Checkbox</type>
</CustomField>