unpackaged/main/default/objects/Opportunity/fields/Contract_Received_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Received_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto populates the "Close Date"date that only the Project Admin/Coordinator (currently Sid) or Project Manager (currently Kevin) can check.</description>
    <label>Contract Received Confirmed</label>
    <type>Checkbox</type>
</CustomField>