unpackaged/main/default/objects/Opportunity/fields/Contract_Received_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Received_Confirmed_Date__c</fullName>
    <label>Contract Received Confirmed Date</label>
    <type>Date</type>
</CustomField>