unpackaged/main/default/objects/Opportunity/fields/Contract_Sent__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Sent</label>
    <type>Checkbox</type>
</CustomField>