unpackaged/main/default/objects/Opportunity/fields/Contractor_Account__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created for O&amp;M record type to associate with Contractor accounts</description>
    <inlineHelpText>This field is created for O&amp;M record type to associate with Contractor accounts</inlineHelpText>
    <label>Contractor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contractor Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>