unpackaged/main/default/objects/Opportunity/fields/Contractor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Contractor Contact)</relationshipLabel>
    <relationshipName>ContractorContact</relationshipName>
    <type>Lookup</type>
</CustomField>