unpackaged/main/default/objects/Opportunity/fields/Contractor_Cost__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Cost__c</fullName>
    <description>FOR O&amp;M SALES</description>
    <label>Contractor Cost</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>