unpackaged/main/default/objects/Opportunity/fields/Copy_Drivers_License__c.field-meta.xml
<CustomField>
    <fullName>Copy_Drivers_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Wet Stamped Plans</label>
    <type>Checkbox</type>
</CustomField>