unpackaged/main/default/objects/Opportunity/fields/cost_of_permitting__c.field-meta.xml
<CustomField>
    <fullName>cost_of_permitting__c</fullName>
    <label>Cost For Permitting</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>