unpackaged/main/default/objects/Opportunity/fields/Crews_Available__c.field-meta.xml
<CustomField>
    <fullName>Crews_Available__c</fullName>
    <label>Crews Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>