unpackaged/main/default/objects/Opportunity/fields/Current_Annual_Utility_Spend__c.field-meta.xml
<CustomField>
    <fullName>Current_Annual_Utility_Spend__c</fullName>
    <label>Current Annual Utility Spend ($)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>