unpackaged/main/default/objects/Opportunity/fields/Current_Energy_Usage_Input__c.field-meta.xml
<CustomField>
    <fullName>Current_Energy_Usage_Input__c</fullName>
    <defaultValue>false</defaultValue>
    <description>On the Current Energy Usage tab, ensure the correct utility provider is listed.  You will need an actual utility bill from the customer to enter the data in this section.</description>
    <inlineHelpText>On the Current Energy Usage tab, ensure the correct utility provider is listed.  You will need an actual utility bill from the customer to enter the data in this section.</inlineHelpText>
    <label>Current Energy Usage Input</label>
    <type>Checkbox</type>
</CustomField>