unpackaged/main/default/objects/Opportunity/fields/Customer_Care_Representative__c.field-meta.xml
<CustomField>
    <fullName>Customer_Care_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Care Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opp_Customer_Care_Specialist</relationshipName>
    <type>Lookup</type>
</CustomField>