unpackaged/main/default/objects/Opportunity/fields/Customer_Confirmed_Install__c.field-meta.xml
<CustomField>
    <fullName>Customer_Confirmed_Install__c</fullName>
    <description>Customer Confirmed Install</description>
    <label>Customer Confirmed Install</label>
    <type>Date</type>
</CustomField>