unpackaged/main/default/objects/Opportunity/fields/Customer_Eligibility_Checked__c.field-meta.xml
<CustomField>
    <fullName>Customer_Eligibility_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Eligibility Checked</label>
    <type>Checkbox</type>
</CustomField>