unpackaged/main/default/objects/Opportunity/fields/Customer_Must_submit_HOA_application__c.field-meta.xml
<CustomField>
    <fullName>Customer_Must_submit_HOA_application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Homeowner Must submit HOA</label>
    <type>Checkbox</type>
</CustomField>