unpackaged/main/default/objects/Opportunity/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Used for Salesforce Marketing Cloud. Do not Delete</description>
    <formula>Contact__r.FirstName + " " +  Contact__r.LastName</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>