unpackaged/main/default/objects/Opportunity/fields/Customer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notes__c</fullName>
    <label>Customer Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>