unpackaged/main/default/objects/Opportunity/fields/Customer_Satisfaction_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_Call_Date__c</fullName>
    <label>Customer Satisfaction Call Date</label>
    <type>Date</type>
</CustomField>