unpackaged/main/default/objects/Opportunity/fields/Customer_Satisfaction_Install_Notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_Install_Notes__c</fullName>
    <label>Documentation Notes</label>
    <length>106304</length>
    <type>LongTextArea</type>
</CustomField>