unpackaged/main/default/objects/Opportunity/fields/Customer_Sent_HOA_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sent_HOA_Application_Date__c</fullName>
    <label>HOA Application Submission Confirmed</label>
    <type>Date</type>
</CustomField>