unpackaged/main/default/objects/Opportunity/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential - Customer</fullName>
                <default>true</default>
                <label>Residential - Customer</label>
            </value>
            <value>
                <fullName>Alchemy</fullName>
            </value>
            <value>
                <fullName>Build Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>