unpackaged/main/default/objects/Opportunity/fields/Days_Between_Appt_Date_and_Contract_Recd__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_Appt_Date_and_Contract_Recd__c</fullName>
    <formula>Contract_Received_Date__c -  Appointment_Date__c</formula>
    <label>Days Between Appt Date and Contract Recd</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>