unpackaged/main/default/objects/Opportunity/fields/Days_Between_CR_and_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_CR_and_Cancellation__c</fullName>
    <formula>Cancellation_Date__c - Contract_Received_Date__c</formula>
    <label>Days Between CR and Cancellation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>