unpackaged/main/default/objects/Opportunity/fields/Days_Between_Create_Appt_Outcome_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_Create_Appt_Outcome_Date__c</fullName>
    <formula>""</formula>
    <label>Days Between Create &amp; Appt Complete Date</label>
    <type>Text</type>
</CustomField>