unpackaged/main/default/objects/Opportunity/fields/Days_Between_Create_Contract_Recd_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_Create_Contract_Recd_Date__c</fullName>
    <formula>Contract_Received_Date__c  - DATEVALUE(CreatedDate)</formula>
    <label>Days Between Create &amp; Contract Recd Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>