unpackaged/main/default/objects/Opportunity/fields/Days_Between_Create_Contract_Sign__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_Create_Contract_Sign__c</fullName>
    <formula>Contract_Signed_Date__c -  DATEVALUE(CreatedDate)</formula>
    <label>Days Between Create &amp; Contract Sign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>