unpackaged/main/default/objects/Opportunity/fields/Days_Engineering_Complete_to_PermitFiled__c.field-meta.xml
<CustomField>
    <fullName>Days_Engineering_Complete_to_PermitFiled__c</fullName>
    <formula>IF( ISBLANK(Engineering_Complete_Date__c) = True, 0, IF(ISBLANK(Permit_Filed_Date__c) = False,   Permit_Filed_Date__c - Engineering_Complete_Date__c, Today() - Engineering_Complete_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Engineering Complete to PermitFiled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>