unpackaged/main/default/objects/Opportunity/fields/Days_Since_Contract_Received__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Contract_Received__c</fullName>
    <formula>IF(  ISBLANK(Installation_Complete_Date__c) = True, IF( TODAY()  -  CloseDate &gt; 0, TODAY()  -  CloseDate, 0),  Installation_Complete_Date__c - CloseDate)</formula>
    <label>Days Since Contract Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>