unpackaged/main/default/objects/Opportunity/fields/Days_since_contract_received_confirmed__c.field-meta.xml
<CustomField>
    <fullName>Days_since_contract_received_confirmed__c</fullName>
    <formula>IF( ISBLANK(Installation_Complete_Date__c) = True, IF( TODAY() - Contract_Received_Confirmed_Date__c &gt; 0, TODAY() - Contract_Received_Confirmed_Date__c, 0), Installation_Complete_Date__c - Contract_Received_Confirmed_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since contract received confirmed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>