unpackaged/main/default/objects/Opportunity/fields/Days_Since_Installation__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Installation__c</fullName>
    <formula>Today() -  Installation_Complete_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Installation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>