unpackaged/main/default/objects/Opportunity/fields/Days_Since_Last_Modification__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Modification__c</fullName>
    <formula>TODAY()  -  DATEVALUE(LastModifiedDate)</formula>
    <label>Days Since Last Modification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>