unpackaged/main/default/objects/Opportunity/fields/Days_Since_PTO_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_PTO_Date__c</fullName>
    <formula>TODAY() -  Net_Meter_Install_Date__c</formula>
    <label>Days Since PTO Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>