unpackaged/main/default/objects/Opportunity/fields/Days_Site_Approved_to_Permit_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Days_Site_Approved_to_Permit_Submitted__c</fullName>
    <formula>IF(  AND(ISBLANK(Permit_Filed_Date__c) = False, ISBLANK(Site_Approved_Date__c) = False), Permit_Filed_Date__c -  Site_Approved_Date__c , 

IF( ISBLANK(Permit_Filed_Date__c) = True, IF( ISBLANK(Site_Approved_Date__c) = False, Today() - Site_Approved_Date__c, 0), 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Site Approved to Permit Submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>