unpackaged/main/default/objects/Opportunity/fields/Days_to_Permit_Approval__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Permit_Approval__c</fullName>
    <formula>IF( ISBLANK( Permit_Ready_Date__c ) = False, Permit_Ready_Date__c -  Permit_Filed_Date__c , If(ISBLANK(Permit_Filed_Date__c) = False, Today() - Permit_Filed_Date__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Permit Submitted to Permit Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>