unpackaged/main/default/objects/Opportunity/fields/Dealer_Fee__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Fee__c</fullName>
    <label>Loan Pal Dealer Fee Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>