unpackaged/main/default/objects/Opportunity/fields/Dealer_Fee_Price_Match_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Fee_Price_Match_Reduction__c</fullName>
    <formula>Dealer_Fee_Calc__c - Dealer_Fees_CP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Fee Price Match Reduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>