unpackaged/main/default/objects/Opportunity/fields/Dealer_Fee_Spread_Amount__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Fee_Spread_Amount__c</fullName>
    <formula>Dealer_Fee_Spread_Rate__c * Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Fee Spread Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>