unpackaged/main/default/objects/Opportunity/fields/Dealer_Fee_Spread_Rate__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Fee_Spread_Rate__c</fullName>
    <formula>Commission_Dealer_Fee_Product_Rate__c - Internal_Dealer_Fee_Product_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Fee Spread Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>