unpackaged/main/default/objects/Opportunity/fields/Dealer_Fees_CP__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Fees_CP__c</fullName>
    <formula>Case( Financing_Tool__c,
"Cash", 0.03, 
"Sunlight", Sunlight_Dealer_Fee_Value__c,
"Loan Pal - SubPrime", 0.33,
"Sunnova Lease", Sunnova_Dealer_Fee_Value__c,
"Sunnova Loan/Ownership", Sunnova_Dealer_Fee_Value__c,
"SunRun", Sunrun_Dealer_Fee_Value__c,
Dealer_Fee__c
)* Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Fees - CP</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>