unpackaged/main/default/objects/Opportunity/fields/Dedicated_Crews__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Crews__c</fullName>
    <label>Dedicated Crews</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>