unpackaged/main/default/objects/Opportunity/fields/Deferred_Revenue_Amount_Recorded_in_QB__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Revenue_Amount_Recorded_in_QB__c</fullName>
    <label>Deferred Revenue Amount Recorded in QB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>