unpackaged/main/default/objects/Opportunity/fields/Design_Doesn_t_Fit__c.field-meta.xml
<CustomField>
    <fullName>Design_Doesn_t_Fit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box if no new mounting planes are used and production remains within 5% of original design.</inlineHelpText>
    <label>Design Matches</label>
    <type>Checkbox</type>
</CustomField>