unpackaged/main/default/objects/Opportunity/fields/Design_Notes__c.field-meta.xml
<CustomField>
    <fullName>Design_Notes__c</fullName>
    <label>Design Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>