unpackaged/main/default/objects/Opportunity/fields/Design_Source__c.field-meta.xml
<CustomField>
    <fullName>Design_Source__c</fullName>
    <label>Design Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>mapdwell</fullName>
            </value>
            <value>
                <fullName>Aurora</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>