unpackaged/main/default/objects/Opportunity/fields/Desk_Site_Audit_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Desk_Site_Audit_Review_Date__c</fullName>
    <label>Desk Site Audit Review Date</label>
    <type>Date</type>
</CustomField>