unpackaged/main/default/objects/Opportunity/fields/Disclosure_Completed__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Completed__c</fullName>
    <label>Disclosure Completed</label>
    <type>Date</type>
</CustomField>