unpackaged/main/default/objects/Opportunity/fields/Disclosure_Sent_for_Signature__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Sent_for_Signature__c</fullName>
    <label>Disclosure Sent for Signature</label>
    <type>Date</type>
</CustomField>