unpackaged/main/default/objects/Opportunity/fields/Dividend_Energy_Efficiency_Option__c.field-meta.xml
<CustomField>
    <fullName>Dividend_Energy_Efficiency_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dividend Energy Efficiency Option</label>
    <type>Checkbox</type>
</CustomField>