unpackaged/main/default/objects/Opportunity/fields/Down_Payment__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment__c</fullName>
    <label>Down Payment</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>