unpackaged/main/default/objects/Opportunity/fields/Electric_Panel_Photos__c.field-meta.xml
<CustomField>
    <fullName>Electric_Panel_Photos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QuickMount Used</label>
    <type>Checkbox</type>
</CustomField>