unpackaged/main/default/objects/Opportunity/fields/Electrical_Panel_Amperage__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Panel_Amperage__c</fullName>
    <label>Electrical Panel Amperage</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>