unpackaged/main/default/objects/Opportunity/fields/Electrical_Photos__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Photos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electrical Photos</label>
    <type>Checkbox</type>
</CustomField>