unpackaged/main/default/objects/Opportunity/fields/Electrical_Upgrade_Reqd__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Upgrade_Reqd__c</fullName>
    <label>Electrical Upgrade Reqd?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Main Panel Upgrade</fullName>
            </value>
            <value>
                <fullName>Full Service Upgrade</fullName>
            </value>
            <value>
                <fullName>Meter Base / Service Rise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>