unpackaged/main/default/objects/Opportunity/fields/Energy_Audit_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Energy_Audit_Completed_Date__c</fullName>
    <label>Energy Audit Completed Date</label>
    <type>Date</type>
</CustomField>