unpackaged/main/default/objects/Opportunity/fields/Energy_Bill_Attached__c.field-meta.xml
<CustomField>
    <fullName>Energy_Bill_Attached__c</fullName>
    <label>Energy Bill Attached Date</label>
    <type>Date</type>
</CustomField>