unpackaged/main/default/objects/Opportunity/fields/Engineering_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Complete_Date__c</fullName>
    <label>Engineering Complete Date</label>
    <type>Date</type>
</CustomField>