unpackaged/main/default/objects/Opportunity/fields/Engineering_Created__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BOM Created</label>
    <type>Checkbox</type>
</CustomField>