unpackaged/main/default/objects/Opportunity/fields/Engineering_Notes__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Notes__c</fullName>
    <label>Engineering Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>