unpackaged/main/default/objects/Opportunity/fields/Engineering_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Sent_Date__c</fullName>
    <label>Engineering Sent Date</label>
    <type>Date</type>
</CustomField>