unpackaged/main/default/objects/Opportunity/fields/Engineering_Stamping_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Stamping_Timeline__c</fullName>
    <formula>Engineering_Complete_Date__c -  Engineering_Sent_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engineering Stamping Timeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>