unpackaged/main/default/objects/Opportunity/fields/Equipment_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipment Ordered</label>
    <type>Checkbox</type>
</CustomField>