unpackaged/main/default/objects/Opportunity/fields/Est_First_Year_kWh__c.field-meta.xml
<CustomField>
    <fullName>Est_First_Year_kWh__c</fullName>
    <label>Est. First Year kWh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>