unpackaged/main/default/objects/Opportunity/fields/Est_Sales_Volume__c.field-meta.xml
<CustomField>
    <fullName>Est_Sales_Volume__c</fullName>
    <label>Est. Sales Volume</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-10</fullName>
            </value>
            <value>
                <fullName>11-25</fullName>
            </value>
            <value>
                <fullName>26-40</fullName>
            </value>
            <value>
                <fullName>40+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>