unpackaged/main/default/objects/Opportunity/fields/Final_Application_Approved__c.field-meta.xml
<CustomField>
    <fullName>Final_Application_Approved__c</fullName>
    <label>SRECFinal Application Approved</label>
    <type>Date</type>
</CustomField>