unpackaged/main/default/objects/Opportunity/fields/Final_Application_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Final_Application_Submitted__c</fullName>
    <label>SRECFinal Application Submitted</label>
    <type>Date</type>
</CustomField>