unpackaged/main/default/objects/Opportunity/fields/Final_Design_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Design_Created_Date__c</fullName>
    <label>BOM Created Date</label>
    <type>Date</type>
</CustomField>