unpackaged/main/default/objects/Opportunity/fields/Final_Install_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Final_Install_Payment_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Install Payment Received</label>
    <type>Checkbox</type>
</CustomField>