unpackaged/main/default/objects/Opportunity/fields/Final_Invoice_Amount_Calc__c.field-meta.xml
<CustomField>
    <fullName>Final_Invoice_Amount_Calc__c</fullName>
    <formula>IF( RecordType.Id = '0122L000000kDhg', 0, Amount * 0.1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Invoice Amount (Calc)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>