unpackaged/main/default/objects/Opportunity/fields/Final_Payment__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment__c</fullName>
    <label>Final Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>