unpackaged/main/default/objects/Opportunity/fields/Financier_Milestone1_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Financier_Milestone1_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financier Milestone 0 Submitted</label>
    <type>Checkbox</type>
</CustomField>