unpackaged/main/default/objects/Opportunity/fields/Financier_Milestone_1_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Financier_Milestone_1_Approved_Date__c</fullName>
    <label>Financier Milestone 0 Approved Date</label>
    <type>Date</type>
</CustomField>