unpackaged/main/default/objects/Opportunity/fields/Financier_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Financier_Opportunity_ID__c</fullName>
    <label>Financier Opportunity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>