unpackaged/main/default/objects/Opportunity/fields/Financier_Paid_in_Full__c.field-meta.xml
<CustomField>
    <fullName>Financier_Paid_in_Full__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the Financier has remittance all funds for the project.</description>
    <label>Financier Paid in Full</label>
    <type>Checkbox</type>
</CustomField>