unpackaged/main/default/objects/Opportunity/fields/Fulfillment_Method__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Method__c</fullName>
    <label>Fulfillment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct to Job</fullName>
            </value>
            <value>
                <fullName>Will Call</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>